--- a/pub/css/common.css
+++ b/pub/css/common.css
@@ -42,17 +42,17 @@
 .wrap{width:100%;margin:0 auto;}
 .rtl_txt{direction: rtl;unicode-bidi: bidi-override;}
 .blind {position:absolute;overflow:hidden;width:1px;height:1px;margin:-1px;padding:0;clip:rect(0,0,0,0);}
-.btn_round{display:inline-flex;height:56px;border:1px solid var(--black);border-radius:60px;box-sizing: border-box;font-size:18px;font-weight:500;text-align: center;}
+.btn_round{display:inline-flex;height:56px;border:1px solid var(--black);border-radius:60px;box-sizing: border-box;font-size:var(--font18);font-weight:500;text-align: center;}
 .btn_round a,
-.btn_round button{color:var(--black);font-size: 18px;font-weight: 500;padding:0 32px;line-height:54px}
+.btn_round button{color:var(--black);font-size:var(--font18);font-weight: 500;padding:0 32px;line-height:54px}
 .required{color:#F00}
 
 /* 상세페이지 */
 .cont_detail_wrap{max-width:1920px;margin:0 auto;padding:80px 180px 100px;box-sizing: border-box;}
 .detail_header{text-align:center;padding:100px 0 64px;border-bottom:1px solid #e2e2e2;box-sizing: border-box;}
 .detail_header .detail_info{display: flex;gap:24px;justify-content: center;}
-.detail_header .detail_info .cate_txt{font-size:18px;color:var(--black);font-weight:700}
-.detail_header .detail_info .date_txt{font-size:18px;color:var(--black);font-weight:400}
+.detail_header .detail_info .cate_txt{font-size:var(--font18);color:var(--black);font-weight:700}
+.detail_header .detail_info .date_txt{font-size:var(--font18);color:var(--black);font-weight:400}
 .detail_header .detail_tit{margin-top:24px;font-size:48px;color:var(--black);font-weight:700;line-height: 62px;word-break: keep-all;overflow-wrap: break-word;}
 .detail_header .social_list{display: flex;gap:16px;justify-content: center;margin-top:64px}
 .detail_header .social_list .social_item a{display: block;width:48px;height:48px;border:1px solid var(--black);border-radius:50%;}
@@ -65,13 +65,13 @@
 .detail_body .detail_media{margin:0 auto;width: 100%; max-height:580px;text-align: center;}
 .detail_body .detail_media img{width: 100%; height:100%;}
 .detail_body .txt_area{margin-top:36px}
-.detail_body .txt_area .detail_section p{color:var(--black);font-size:18px;line-height: 28px;}
+.detail_body .txt_area .detail_section p{color:var(--black);font-size:var(--font18);line-height: 28px;}
 .detail_body .txt_area .detail_section ~ .detail_section{margin-top:28px}
 .detail_body .detail_meta{margin-top:100px}
-.detail_body .detail_meta .meta_tags{display: flex;gap:16px;color:#6e6e6e;font-size:16px}
+.detail_body .detail_meta .meta_tags{display: flex;gap:16px;color:#6e6e6e;font-size:var(--font16)}
 .detail_body .meta_source{margin-top:24px;display: flex;gap:16px;color:#6e6e6e}
-.detail_body .meta_source .meta_label{font-size:16px;font-weight:700;}
-.detail_body .meta_source .meta_value{font-size:16px;}
+.detail_body .meta_source .meta_label{font-size:var(--font16);font-weight:700;}
+.detail_body .meta_source .meta_value{font-size:var(--font16);}
 
 .detail_footer{padding-top:64px;text-align:center;border-top:1px solid #e2e2e2;box-sizing: border-box;}
 
@@ -108,17 +108,17 @@
 
 
 @media (min-width:768px) and (max-width:1228px) {
-    .btn_round{height:48px;line-height:46px;font-size:16px}
+    .btn_round{height:48px;line-height:46px;font-size:var(--font16)}
     .btn_round a,
-    .btn_round button{padding:0 26px;line-height: 46px;font-size:16px}
+    .btn_round button{padding:0 26px;line-height: 46px;font-size:var(--font16)}
 
     /* 상세페이지 */
     .cont_detail_wrap{padding:64px 38px;box-sizing: border-box;}
     .detail_header{padding:64px 0 36px}
     .detail_header .detail_info{gap:16px}
     .detail_header .detail_info .cate_txt,
-    .detail_header .detail_info .date_txt{font-size:14px}
-    .detail_header .detail_tit{margin-top:16px;font-size:32px;line-height: 42px}
+    .detail_header .detail_info .date_txt{font-size:var(--font14)}
+    .detail_header .detail_tit{margin-top:16px;font-size:var(--font32);line-height: 42px}
     .detail_header .social_list{gap:14px;margin-top:36px}
     .detail_header .social_list .social_item a{display: block;width:42px;height:42px}
     .detail_header .social_list .social_item.facebook a{background-size: 10px 16px;}
@@ -128,13 +128,13 @@
 
     .detail_body{padding:36px 0 65px}
     .detail_body .txt_area{margin-top:24px}
-    .detail_body .txt_area .detail_section p{font-size:16px;line-height: 24px;}
+    .detail_body .txt_area .detail_section p{font-size:var(--font16);line-height: 24px;}
     .detail_body .txt_area .detail_section ~ .detail_section{margin-top:24px}
     .detail_body .detail_meta{margin-top:64px}
-    .detail_body .detail_meta .meta_tags{font-size:14px}
+    .detail_body .detail_meta .meta_tags{font-size:var(--font14)}
     .detail_body .meta_source{margin-top:12px;gap:12px}
     .detail_body .meta_source .meta_label,
-    .detail_body .meta_source .meta_value{font-size:14px;}
+    .detail_body .meta_source .meta_value{font-size:var(--font14);}
 
     .detail_footer{padding-top:36px}
 
@@ -156,9 +156,9 @@
 
 
 @media (max-width:767px) {
-    .btn_round{height:42px;line-height:40px;font-size:14px}
+    .btn_round{height:42px;line-height:40px;font-size:var(--font14)}
     .btn_round a,
-    .btn_round button{padding:0 22px;line-height: 40px;font-size:14px;}
+    .btn_round button{padding:0 22px;line-height: 40px;font-size:var(--font14);}
 
     /* 상세페이지 */
     .cont_detail_wrap{padding:56px 24px 36px}
@@ -176,7 +176,7 @@
 
     .detail_body{padding:24px 0 36px}
     .detail_body .txt_area{margin-top:12px}
-    .detail_body .txt_area .detail_section p{font-size:14px;line-height: 20px;}
+    .detail_body .txt_area .detail_section p{font-size:var(--font14);line-height: 20px;}
     .detail_body .txt_area .detail_section ~ .detail_section{margin-top:20px}
     .detail_body .detail_meta{margin-top:36px}
     .detail_body .detail_meta .meta_tags{font-size:12px}
