--- a/pub/css/layout.css
+++ b/pub/css/layout.css
@@ -20,11 +20,11 @@ header.active .header_area .depth2{display:block;}
 
 .header_area .gnb ul.depth1{display:flex;justify-content:space-between}
 .header_area .gnb ul.depth1 > li{position:relative;}
-.header_area .gnb ul.depth1 > li > a{display:block;height:80px;line-height:80px;font-size:18px;font-weight:bold;color:var(--black); padding:0 50px; }
+.header_area .gnb ul.depth1 > li > a{display:block;height:80px;line-height:80px;font-size:var(--font18);font-weight:bold;color:var(--black); padding:0 50px; }
 .header_area .gnb ul.depth1 > li > a:hover{text-decoration:underline;text-underline-offset:1px;text-decoration-thickness:2px;}
 
 .header_area ul.depth2 {display:none;margin-top:36px;background-color:var(--white);}
-.header_area .gnb ul.depth2 > li > a{display:block;min-width:78px; font-size:16px;color:var(--black);line-height:19px;text-align:center;}
+.header_area .gnb ul.depth2 > li > a{display:block;min-width:78px; font-size:var(--font16);color:var(--black);line-height:19px;text-align:center;}
 .header_area .gnb ul.depth2 > li > a:hover{text-decoration:underline;text-underline-offset:1px;}
 .header_area .gnb ul.depth2 > li + li{margin-top:16px}
 
@@ -34,7 +34,7 @@ header.active .header_area .depth2{display:block;}
 .header_area .util .lang_box .lang_list{display:none;position:absolute;z-index:10;top:82px;left:50%;transform:translateX(-50%);padding:16px 24px;border-radius:8px;background-color:var(--white);}
 .header_area .util .lang_box .lang_list{padding:16px 24px;border-radius:8px;background-color:var(--white);}
 .header_area .util .lang_box .lang_list li + li{margin-top:12px}
-.header_area .util .lang_box .lang_list li a{font-size:16px;color:#b3b3b3;line-height:19px;}
+.header_area .util .lang_box .lang_list li a{font-size:var(--font16);color:#b3b3b3;line-height:19px;}
 .header_area .util .lang_box .lang_list li.selected a{color:var(--black);text-decoration:underline; text-underline-offset:2px;}
 .header_area .util .btn_menu{display:none;}
 
@@ -52,11 +52,11 @@ header .lnb_wrap.open{display:block;}
 .footer{background-color:var(--black);color:var(--white)}
 .footer .footer_inner{max-width:1920px;margin:0 auto;padding:48px 180px;box-sizing: border-box;}
 .footer .footer_top{display:flex;justify-content:space-between}
-.footer .footer_company{font-size:18px;font-weight:700;line-height:28px;}
+.footer .footer_company{font-size:var(--font18);font-weight:700;line-height:28px;}
 .footer .footer_nav ul{display:flex;gap:16px}
-.footer .footer_nav ul li a{font-size:14px;color:#6e6e6e;font-weight:700;}
+.footer .footer_nav ul li a{font-size:var(--font14);color:#6e6e6e;font-weight:700;}
 
-.footer .footer_detail{min-width:580px; margin-top:16px;font-size:14px;line-height:22px;color:var(--white)}
+.footer .footer_detail{min-width:580px; margin-top:16px;font-size:var(--font14);line-height:22px;color:var(--white)}
 .footer .footer_detail .info_row{display:flex;align-items:center;}
 .footer .footer_detail .info_row span + span::before{content:"|";margin:0 10px;color:#6e6e6e;}
 .footer .footer_copy {margin-top:48px;font-size:12px;line-height:22px;color:#6e6e6e;line-height:14px;}
@@ -78,7 +78,7 @@ header .lnb_wrap.open{display:block;}
     .header_area .util .lang_box .lang_btn{margin-top:0;width:32px;height:32px;}
     .header_area .util .btn_menu{display:block; width:32px;height:32px;background:url(../images/btn_menu.png) 100% / 100% no-repeat;}
     .header_area .util .lang_box .lang_list{top:50px;padding:14px 18px}
-    .header_area .util .lang_box .lang_list li a{font-size:14px;line-height:17px;}
+    .header_area .util .lang_box .lang_list li a{font-size:var(--font14);line-height:17px;}
     
     .lnb_wrap .lnb_top{padding:16px 38px;box-sizing:border-box;display:flex;justify-content:space-between;align-items:center;border-bottom:1px solid #E2E2E2;}
     .lnb_wrap .lnb_top .lnb_logo{width:80px;height:32px;}
@@ -86,7 +86,7 @@ header .lnb_wrap.open{display:block;}
     .lnb_wrap .lnb_top .lnb_logo img{width:100%;height:100%;object-fit:contain;}
     .lnb_wrap .lnb_top .lnb_util{display:flex;align-items:center;gap:12px;}
     .lnb_wrap .lnb_top .lnb_util .lang{display:flex;gap:8px;}
-    .lnb_wrap .lnb_top .lnb_util .lang li a{font-size:14px;line-height:17px;color:#b3b3b3;}
+    .lnb_wrap .lnb_top .lnb_util .lang li a{font-size:var(--font14);line-height:17px;color:#b3b3b3;}
     .lnb_wrap .lnb_top .lnb_util .lang li.selected a{color:var(--black);text-decoration:underline; text-underline-offset:2px;}
     .lnb_wrap .lnb_top .btn_close{width:32px;height:32px;background:url(../images/btn_close_32.png) 100% / 100% no-repeat}
     .lnb_wrap .lnb_content{overflow-y:auto;height:calc(100% - 64px);}
@@ -97,14 +97,14 @@ header .lnb_wrap.open{display:block;}
     .lnb_wrap .lnb_nav .depth1 > li .toggle_tit .ico_arr{display: block;width: 28px;height: 28px;background: url(../images/ico_arr_down.png) 100% / 100% no-repeat;transform: rotateX(180deg);}
     .lnb_wrap .lnb_nav li .depth2{display: none; margin-top:12px}
     .lnb_wrap .lnb_nav li .depth2 li + li {margin-top:12px}
-    .lnb_wrap .lnb_nav li .depth2 li a{display: block; color:var(--black);font-size:16px;line-height: 19px;}
+    .lnb_wrap .lnb_nav li .depth2 li a{display: block; color:var(--black);font-size:var(--font16);line-height: 19px;}
     .lnb_wrap .lnb_nav .depth1 > li.active .toggle_tit .ico_arr{transform: rotateX(0);}
     .lnb_wrap .lnb_nav .depth1 > li.active .depth2{display: block;}
     
     .footer .footer_detail{min-width: auto; font-size:12px;line-height:20px}
     .footer .footer_detail .info_row{flex-wrap: wrap;}
     .footer .footer_inner{padding:36px 38px;}
-    .footer .footer_company{font-size:18px;line-height:26px;}
+    .footer .footer_company{font-size:var(--font18);line-height:26px;}
     .footer .footer_nav ul li a{font-size:12px;line-height:22px;}
 
     .contents{padding:65px 0 64px; min-height:800px;box-sizing: border-box;}
@@ -139,11 +139,11 @@ header .lnb_wrap.open{display:block;}
     .lnb_wrap .lnb_nav{padding:24px 24px 36px}
     .lnb_wrap .lnb_nav .depth1 > li{margin-bottom:24px;}
     .lnb_wrap .lnb_nav .depth1 > li:last-child{margin-bottom:0;}
-    .lnb_wrap .lnb_nav .depth1 > li .toggle_tit{display:flex;justify-content:space-between;align-items:center;width:100%;font-size:18px;font-weight:700;color:var(--black);}
+    .lnb_wrap .lnb_nav .depth1 > li .toggle_tit{display:flex;justify-content:space-between;align-items:center;width:100%;font-size:var(--font18);font-weight:700;color:var(--black);}
     .lnb_wrap .lnb_nav .depth1 > li .toggle_tit .ico_arr{display: block;width: 28px;height: 28px;background: url(../images/ico_arr_down.png) 100% / 100% no-repeat;transform: rotateX(180deg);}
     .lnb_wrap .lnb_nav li .depth2{display: none; margin-top:12px}
     .lnb_wrap .lnb_nav li .depth2 li + li {margin-top:8px}
-    .lnb_wrap .lnb_nav li .depth2 li a{display: block; color:var(--black);font-size:14px;line-height: 17px;}
+    .lnb_wrap .lnb_nav li .depth2 li a{display: block; color:var(--black);font-size:var(--font14);line-height: 17px;}
     .lnb_wrap .lnb_nav .depth1 > li.active .toggle_tit .ico_arr{transform: rotateX(0);}
     .lnb_wrap .lnb_nav .depth1 > li.active .depth2{display: block;}
 
@@ -152,7 +152,7 @@ header .lnb_wrap.open{display:block;}
     .footer .footer_detail .info_row span:last-child{width: 100%;}
     .footer .footer_detail .info_row span:last-child:before{display: none;}
     .footer .footer_inner{padding:24px;}
-    .footer .footer_company{font-size:16px;line-height:24px;}
+    .footer .footer_company{font-size:var(--font16);line-height:24px;}
     .footer .footer_nav{display:none;}
     .footer .footer_copy {margin-top:40px;font-size:10px;line-height:12px}
 
